tests/baselines/reference/parserComputedPropertyName30.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName30.ts(3,5): error TS1164: Computed property names are not allowed in enums.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName30.ts(3,11): error TS2304: Cannot find name 'id'.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName30.ts(4,5): error TS1357: An enum member name must be followed by a ',', '=', or '}'.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName30.ts(4,5): error TS1164: Computed property names are not allowed in enums.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName30.ts (4 errors) ====
    enum E {
        // no ASI, comma expected
        [e] = id++
        ~~~
!!! error TS1164: Computed property names are not allowed in enums.
              ~~
!!! error TS2304: Cannot find name 'id'.
        [e2] = 1
        ~
!!! error TS1357: An enum member name must be followed by a ',', '=', or '}'.
        ~~~~
!!! error TS1164: Computed property names are not allowed in enums.
    }